kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: funcionou-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: funcionou-app
  template:
    metadata:
      labels:
        app: funcionou-app
    spec:
      containers:
        - name: funcionou-app
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: funcionou-html
