kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: funcionou-app
  namespace: default
spec:
  selector:
    app: funcionou-app
  ports:
    - port: 80
      targetPort: 80
