kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funcionou-app
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
    - host: testek8s.artificerhouse.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: funcionou-app
                port:
                  number: 80
  tls:
    - hosts:
        - testek8s.artificerhouse.com.br
      secretName: funcionou-tls
